Add structure index.html for guest list manager

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Guest List Manager</h1>
+        <form id="guest-form">
+        <div id="guest-list-form">
+            <input type="text" id="guest-name" placeholder="Enter guest name">
+            <input type="submit" id="add-guest" value="Add Guest">
+        </div>
+        </form>
+        <div id="add-guest">
+            <h2>Guest List</h2>
+            <ul id="guest-list">
+                <!-- Guest names will be added here -->
+            </ul>
+        </div>
+
+    </div>
     <script src="./src/index.js"></script>
 </body>
 </html>
