Refactor guest list rendering and input handling in JavaScript

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
             <input type="submit" id="add-guest" value="Add Guest">
         </div>
         </form>
-        <div id="add-guest">
-            <h2>Guest List</h2>
-            <ul id="guest-list">
-                <!-- Guest names will be added here -->
-            </ul>
+        <h2>Guest List</h2>
+        <div id="guest-list">
+            
         </div>
 
     </div>
