Add introductory paragraph to guest list

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Guest List Manager</h1>
+        <p>Add guests, toggle attendance, and keep your event drama-free — just clicks, no chaos.</p>
         <form id="guest-form">
         <div id="guest-list-form">
             <input type="text" id="guest-name" placeholder="Enter guest name">
